# nova-sounds

./: .coverage  .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  CHANGELOG.md  DEBUG.md  DEBUG_FIX.md  DEBUG_FIXES.md  Dockerfile  FAVICON_FIX.md  FEATURES.md  FIREBASE_AUTH_SETUP.md  FIXED_SETUP.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_UPDATE.md  ISSUE_FIXED.md  PRD.md  QUICKSTART.md  README-music-recommendations.md  README-music-responsive.md  README.md  SETUP_GCP.md  SUPABASE_AUTH_SETUP.md  TESTING.md  TROUBLESHOOTING.md  UI_IMPROVEMENTS.md  WEBSOCKET_TEST.md  client_secret.template.json  debug.py  debug_and_fix.py  debug_api.py  debug_features.py  debug_music_responsive.py  debug_test.py  debug_ui.py  debug_ui_fix.py  docker-compose.yml  (+36 more)
.devcontainer/: devcontainer.json
docs/: ANALYTICS.md
etl/: Dockerfile  meltano.yml  pyproject.toml
etl/src/: cli.py
infra/: .terraform.lock.hcl  main.tf  terraform.tfvars.example  variables.tf
mock_data/: artists.csv  streams.csv
services/: pyproject.toml
services/functions/alert_threshold_api/: main.py  requirements.txt
services/functions/pitch_score_api/: .gitignore  main.py  requirements.txt
templates/: analytics_dashboard.html  audio_waveform_demo.html  base.html  channel_analytics.html  debug-console.html  debug-toolbar.html  debug.html  debug_diagnostics.html  enhanced.html  error.html  gallery.html  index.html  landing.html  music_browser_panel.html  onboarding.html  preview_player.html  progress_tracker.html  runway.html  seo_metadata_autofill.html  signup.html  (+9 more)
(+239 files in other folders)
